tests/expectations/compiler/core/algorithms/integers/poseidon8/poseidon8_hash_to_i8.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:21
     |
  28 |         let a: i8 = Poseidon8::hash_to_i8(addr_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:21
     |
  29 |         let b: i8 = Poseidon8::hash_to_i8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:21
     |
  30 |         let c: i8 = Poseidon8::hash_to_i8(field_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:21
     |
  31 |         let d: i8 = Poseidon8::hash_to_i8(group_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:21
     |
  32 |         let e: i8 = Poseidon8::hash_to_i8(i8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:21
     |
  33 |         let f: i8 = Poseidon8::hash_to_i8(i16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:21
     |
  34 |         let g: i8 = Poseidon8::hash_to_i8(i32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:21
     |
  35 |         let h: i8 = Poseidon8::hash_to_i8(i64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:21
     |
  36 |         let i: i8 = Poseidon8::hash_to_i8(i128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:21
     |
  37 |         let j: i8 = Poseidon8::hash_to_i8(u8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:21
     |
  38 |         let k: i8 = Poseidon8::hash_to_i8(u16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:21
     |
  39 |         let l: i8 = Poseidon8::hash_to_i8(u32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:21
     |
  40 |         let m: i8 = Poseidon8::hash_to_i8(u64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:21
     |
  41 |         let n: i8 = Poseidon8::hash_to_i8(u128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:21
     |
  42 |         let o: i8 = Poseidon8::hash_to_i8(scalar_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:21
     |
  44 |         let q: i8 = Poseidon8::hash_to_i8(Foo { a: 1u128, b: 1u128 });
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
